src/assets/dps/components/alert-flag/_alert-flag.scss
@use "sass:selector";

@mixin unify-parent($child) {
  @at-root #{selector.unify(&, $child)} {
    @content;
  }
}

%status-style {
  @media screen {
    justify-content: center;
    border: 3px solid;
    padding: 5px 10px;
    height: initial;
    font-size: 16px;
    text-align: center;
    line-height: 1;
    user-select: none;
    border-radius: 5px;
  }

  @media print {
    margin-bottom: 0px !important;
    font-size: 12px;
    color: black !important;
    border: none !important;
    background: none !important;
    min-width: auto;
  }
}

@mixin alertType($colour) {
  border-color: $colour;

  @include unify-parent('a') {
    &:hover, &:focus {
      text-decoration: none;
      background-color: $colour;
      color: white;
    }

    &:focus {
      box-shadow: 0 0 0 3px $govuk-focus-colour;
    }
  }
}

.dps-alert-status {
  @extend %status-style;
  margin-right: 0;
  display: inline-flex;
  align-items: center;

  color: black;
  background-color: white;

  &--care-leaver {
    @include alertType(#00703c);
  }

  &--ex-armed-forces {
    @include alertType(#85994b);
  }

  &--medical {
    @include alertType(#5694ca);
  }

  &--other {
    @include alertType(#d53880);
  }

  &--MAPPP-case {
    @include alertType(#28a197);
  }

  &--security {
    @include alertType(#003078);
  }

  &--risk {
    @include alertType(#d4351c);
  }

  &--self-harm {
    @include alertType(#f47738);
  }



  &--acct {
    @include alertType(#d34700);
  }

  &--assault {
    @include alertType(#4c2c92);
  }

  &--disability {
    @include alertType(#2b88c8);
  }

  &--arsonist {
    @include alertType(#df3034);
  }

  &--elist {
    @include alertType(#28a197);
  }

  &--risk-females {
    @include alertType(#6f71af);
  }

  &--tact {
    @include alertType(#d53880);
  }

  &--corruptor {
    @include alertType(#b10e1e);
  }

  &--chemical-attacker {
    @include alertType(#69831e);
  }

  &--concerted-indiscipline {
    @include alertType(#444);
  }

  &--racist {
    @include alertType(#8f5f11);
  }

  &--risk-lgbt {
    @include alertType(#912b88);
  }

  &--hostage-taker {
    @include alertType(#c6545f);
  }

  &--controlled-unlock {
    @include alertType(#2e358b);
  }

  &--gang-member {
    @include alertType(#005f9e);
  }

  &--csip {
    @include alertType(#4c2c92);
  }

  &--veteran {
    @include alertType(#006435);
  }

  &--care-experienced {
    @include alertType(#3f90ae);
  }

  &--acct-post-closure {
    border: 3px dashed;
    @include alertType(#f47738);
  }

  &--conflict {
    @include alertType(#800000);
  }

  &--no-one-to-one {
    @include alertType(#903);
  }

  &--quarantined {
    @include alertType(#330);
  }

  &--reverse-cohorting-unit {
    @include alertType(mix(white, #00703c, 20%));
  }

  &--protective-isolation-unit {
    @include alertType(#006637);
  }

  &--shielding-unit {
    @include alertType(#004424);
  }

  &--refusing-to-shield {
    @include alertType(#b58840);
  }

  &--risk-to-known-adults {
    @include alertType(#003078);
  }

  &--isolated-prisoner {
    @include alertType(#00753f);
  }

  &--visor {
    @include alertType(#003078);
  }
}

.alert-status--multicase {
  @media screen {
    text-transform: none;
    min-height: 30px;
  }
}

